# ChessEngine

./: CMakeLists.txt  README.md  comments.txt  eval.cpp  eval.h  eval_helper.cpp  initialize.cpp  initialize.h  legal_moves.cpp  mael.kupperschmitt.readme.md  main.cpp  moves.cpp  nicolas.asseo.readme.md  old_eval.cpp  piece.cpp  pieces.h  print.cpp  print.h  tree.cpp  tree.h  utility.h
